SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/Color__c.field-meta.xml
<CustomField>
        <fullName>Color__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attribute (if it is a Picklist) has color code that should be displayed on the Program Calendar and where color is defined on the native Picklist color picker</description>
        <inlineHelpText>Attribute (if it is a Picklist) has color code that should be displayed on the Program Calendar and where color is defined on the native Picklist color picker</inlineHelpText>
        <label>Color</label>
        <type>Checkbox</type>
    </CustomField>