SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/Field__c.field-meta.xml
<CustomField>
        <fullName>Field__c</fullName>
        <description>Field API Name</description>
        <inlineHelpText>Field API Name</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>