SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/FilterDefault__c.field-meta.xml
<CustomField>
        <fullName>FilterDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set default as the Filter By on initial page load</inlineHelpText>
        <label>FilterDefault</label>
        <type>Checkbox</type>
    </CustomField>