SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/FilterOrder__c.field-meta.xml
<CustomField>
        <fullName>FilterOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of the Filters - set to 0 if there is no Filter</description>
        <inlineHelpText>Order of the Filters - set to 0 if there is no Filter</inlineHelpText>
        <label>FilterOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>