SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/GroupBy__c.field-meta.xml
<CustomField>
        <fullName>GroupBy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Group by this field</description>
        <inlineHelpText>Group by this field</inlineHelpText>
        <label>GroupBy</label>
        <type>Checkbox</type>
    </CustomField>