SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/GroupOrder__c.field-meta.xml
<CustomField>
        <fullName>GroupOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Order of the Groups - set to 0 if there is no Group</description>
        <inlineHelpText>Order of the Groups - set to 0 if there is no Group</inlineHelpText>
        <label>GroupOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>