SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/Logo__c.field-meta.xml
<CustomField>
        <fullName>Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo</label>
        <type>Checkbox</type>
    </CustomField>