SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/Object__c.field-meta.xml
<CustomField>
        <fullName>Object__c</fullName>
        <description>Object API Name</description>
        <inlineHelpText>Object API Name</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>