SFUSA/force-app/main/default/objects/Calendar_Settings__c/fields/SortBy__c.field-meta.xml
<CustomField>
        <fullName>SortBy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sort by this field</description>
        <inlineHelpText>Sort by this field</inlineHelpText>
        <label>SortBy</label>
        <type>Checkbox</type>
    </CustomField>